--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,23 @@ attrs==19.3.0
 black==19.10b0
 click==7.1.2
 colorama==0.4.3
+commonmark==0.9.1
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pathspec==0.8.0
+pprintpp==0.4.0
 prompt-toolkit==3.0.5
+Pygments==2.6.1
 pylint==2.5.3
 questionary==1.5.2
 regex==2020.7.14
+rich==4.2.2
 rope==0.17.0
 six==1.15.0
 tabulate==0.8.7
 toml==0.10.1
 typed-ast==1.4.1
+typing-extensions==3.7.4.2
 wcwidth==0.2.5
 wrapt==1.12.1
